# aura-privesc

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  aura-protocol.md  common-issues.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/history/: ScanHistory.tsx
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/src/components/progress/: PhaseIndicator.tsx  ScanProgress.tsx
frontend/src/components/results/: ApexTable.tsx  ExecutiveSummary.tsx  GraphQLTable.tsx  ObjectsTable.tsx  RestApiTable.tsx
frontend/src/components/scan-form/: AdvancedOptions.tsx  PresetSelector.tsx  ScanForm.tsx
frontend/src/components/shared/: Badge.tsx  CopyButton.tsx  CrudIndicator.tsx  (+1 more)
frontend/src/hooks/: useJob.ts  useRecons.ts  useScanResult.ts  useScans.ts  useTheme.ts
frontend/src/lib/: curl.ts
frontend/src/pages/: DashboardPage.tsx  NewScanPage.tsx  ReconPage.tsx  RecordsPage.tsx  ScanHistoryPage.tsx  ScanPage.tsx
src/aura_privesc/: __init__.py  __main__.py  apex.py  cli.py  client.py  config.py  crud.py  discovery.py  engine.py  enumerator.py  exceptions.py  graphql.py  interactive.py  models.py  permissions.py  proof.py  recon.py  rest_api.py  validator.py
src/aura_privesc/output/: html_output.py  json_output.py  rich_output.py
src/aura_privesc/web/: __init__.py  api.py  app.py  db.py  jobs.py  schemas.py
tests/: test_classification.py
(+25 files in other folders)
