[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aura-privesc"
version = "0.1.0"
description = "Salesforce Aura/Lightning privilege escalation scanner"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.scripts]
aura-privesc = "aura_privesc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
