[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aura-privesc"
version = "0.1.0"
description = "Salesforce Aura/Lightning privilege escalation scanner"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "h2>=4.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
]

[project.scripts]
aura-privesc = "aura_privesc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"aura_privesc.web" = ["static/**/*"]
